YUK-13952 Upgrade JDK to Java 8/ yukon-install Changed to use new server location for jvm.dll - Jess's changes